# GlowEditor

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg.json
Assets/Shaders/: Default.frag  Default.vert  Instanced.frag  Instanced.vert
BarrageEngine/: CMakeLists.txt  stdafx.h  template.cxx
BarrageEngine/Engine/: Engine.cpp  Engine.hpp
BarrageEngine/GUI/: GUIManager.cpp  GUIManager.hpp
BarrageEngine/HTTP/: HTTPManager.cpp  HTTPManager.hpp
BarrageEngine/Input/: InputManager.cpp  InputManager.hpp  KeyMap.hpp
BarrageEngine/Objects/: ObjectManager.cpp  ObjectManager.hpp  ObjectManager.tpp
BarrageEngine/Objects/Archetypes/: ArchetypeManager.cpp  ArchetypeManager.hpp
BarrageEngine/Objects/Archetypes/ObjectArchetype/: ObjectArchetype.cpp  ObjectArchetype.hpp
BarrageEngine/Objects/Archetypes/PoolArchetype/: PoolArchetype.cpp  PoolArchetype.hpp
BarrageEngine/Objects/Components/: ComponentAllocator.cpp  ComponentAllocator.hpp  ComponentAllocator.tpp  EngineComponents.hpp
BarrageEngine/Objects/Components/BaseClasses/: BaseComponent.hpp  ComponentArray.cpp  ComponentArray.hpp  ComponentArray.tpp  SharedComponent.cpp  SharedComponent.hpp
BarrageEngine/Objects/Components/ComponentArrays/: AngularSpeedArray.hpp  DestructibleArray.hpp  LifetimeArray.hpp  PositionArray.hpp  RotationArray.hpp  ScaleArray.hpp  VelocityArray.hpp
BarrageEngine/Objects/Components/SharedComponents/: BoundaryBox.hpp  CircleCollider.hpp  RNG.hpp  Spawner.hpp  Sprite.hpp
BarrageEngine/Objects/Pools/: Pool.cpp  Pool.hpp  Pool.tpp  PoolManager.cpp  PoolManager.hpp  PoolType.cpp  PoolType.hpp
BarrageEngine/Objects/SpawnFuncs/: EngineSpawnFuncs.hpp  SpawnFuncManager.cpp  SpawnFuncManager.hpp
BarrageEngine/Objects/SpawnFuncs/Direction/: DirectionFuncs.cpp  DirectionFuncs.hpp
BarrageEngine/Objects/SpawnFuncs/Position/: PositionFuncs.cpp  PositionFuncs.hpp
BarrageEngine/Objects/Systems/: BaseSystem.cpp  BaseSystem.hpp  EngineSystems.hpp  SystemManager.cpp  SystemManager.hpp  SystemManager.tpp
BarrageEngine/Objects/Systems/Collision/: CollisionSystem.cpp  CollisionSystem.hpp
BarrageEngine/Objects/Systems/Creation/: CreationSystem.cpp  CreationSystem.hpp
BarrageEngine/Objects/Systems/Destruction/: DestructionSystem.cpp  DestructionSystem.hpp
BarrageEngine/Objects/Systems/Draw/: DrawSystem.cpp  DrawSystem.hpp
BarrageEngine/Objects/Systems/Movement/: MovementSystem.cpp  MovementSystem.hpp
BarrageEngine/Random/: Random.cpp  Random.hpp
BarrageEngine/Renderer/: Renderer.cpp  Renderer.hpp
BarrageEngine/Renderer/Shader/: Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
BarrageEngine/Renderer/Texture/: Texture.cpp  Texture.hpp  TextureManager.cpp  TextureManager.hpp
BarrageEngine/State/: State.cpp  State.hpp  StateManager.cpp  StateManager.hpp
BarrageEngine/Utilities/: Utilities.hpp  Utilities.tpp
GlowEditor/: CMakeLists.txt  Registration.cpp  main.cpp
GlowEditor/Archetypes/: ShapeArchetypes.cpp  ShapeArchetypes.hpp
GlowEditor/Editor/: Editor.cpp  Editor.hpp
GlowEditor/States/: State_Main.cpp  State_Main.hpp
